# tq

./: .copier-answers.yml  .detect-secrets.baseline  .gitattributes  .gitignore  .gitleaks.toml  .lycheeignore  .markdownlint.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CHANGELOG.md.j2  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  clippy.toml  cspell.config.yaml  cspell.json  deny.toml  mise.toml  package-lock.json  package.json  pyproject.toml  rustfmt.toml
.github/: CODEOWNERS  SUPPORT.md  dependabot.yml  (+4 more)
crates/tq-cli/: Cargo.toml
crates/tq-cli/src/: app.rs  cli.rs  error.rs  lib.rs  main.rs
crates/tq-cli/tests/: check_command_contract.rs  conformance_harness.rs
crates/tq-cli/tests/fixtures/conformance/clean-run/: scenario.json
crates/tq-cli/tests/fixtures/conformance/clean-run/src/tq/: __init__.py
crates/tq-cli/tests/fixtures/conformance/clean-run/src/tq/engine/: __init__.py  runner.py
crates/tq-cli/tests/fixtures/conformance/clean-run/tests/tq/: __init__.py
crates/tq-cli/tests/fixtures/conformance/clean-run/tests/tq/engine/: __init__.py  test_runner.py
crates/tq-cli/tests/fixtures/conformance/deterministic-ordering/: expected.stdout.json  pyproject.toml  scenario.json
crates/tq-cli/tests/fixtures/conformance/deterministic-ordering/scripts/: __init__.py
crates/tq-cli/tests/fixtures/conformance/deterministic-ordering/scripts/docs/: __init__.py  generate.py
crates/tq-cli/tests/fixtures/conformance/deterministic-ordering/src/tq/: __init__.py  alpha.py  beta.py
crates/tq-cli/tests/fixtures/conformance/deterministic-ordering/tests/scripts/: __init__.py
crates/tq-cli/tests/fixtures/conformance/deterministic-ordering/tests/scripts/docs/: __init__.py  test_stale.py
crates/tq-cli/tests/fixtures/conformance/deterministic-ordering/tests/tq/: __init__.py  test_alpha.py  test_gamma.py
crates/tq-cli/tests/fixtures/conformance/invalid-config-unknown-key/: expected.python.stderr.txt  expected.rust.stderr.txt  pyproject.toml  scenario.json
crates/tq-cli/tests/fixtures/conformance/rule-mapping-missing-test/: expected.stdout.json  pyproject.toml  scenario.json
crates/tq-cli/tests/fixtures/conformance/rule-mapping-missing-test/src/tq/: __init__.py  beta.py
crates/tq-cli/tests/fixtures/conformance/rule-mapping-missing-test/tests/: .keep
crates/tq-cli/tests/fixtures/conformance/rule-orphaned-test/: expected.stdout.json  scenario.json
crates/tq-cli/tests/fixtures/conformance/rule-orphaned-test/src/tq/: __init__.py
crates/tq-cli/tests/fixtures/conformance/rule-orphaned-test/src/tq/engine/: __init__.py  runner.py
crates/tq-cli/tests/fixtures/conformance/rule-orphaned-test/tests/tq/: __init__.py
crates/tq-cli/tests/fixtures/conformance/rule-structure-mismatch/: expected.stdout.json  scenario.json
crates/tq-cli/tests/fixtures/conformance/rule-structure-mismatch/src/tq/: __init__.py
crates/tq-cli/tests/fixtures/conformance/rule-structure-mismatch/tests/tq/: __init__.py  test_runner.py
crates/tq-cli/tests/fixtures/conformance/rule-test-file-too-large/: expected.stdout.json  pyproject.toml  scenario.json
crates/tq-cli/tests/fixtures/conformance/rule-test-file-too-large/src/tq/: __init__.py  alpha.py
crates/tq-cli/tests/fixtures/conformance/rule-test-file-too-large/tests/tq/: __init__.py  test_big.py
crates/tq-cli/tests/fixtures/conformance/target-selection-default/: expected.stdout.json  pyproject.toml  scenario.json
crates/tq-cli/tests/fixtures/conformance/target-selection-default/scripts/: __init__.py
crates/tq-cli/tests/fixtures/conformance/target-selection-default/scripts/docs/: __init__.py  generate.py
crates/tq-cli/tests/fixtures/conformance/target-selection-default/src/tq/: __init__.py  alpha.py
crates/tq-cli/tests/fixtures/conformance/target-selection-filtered/: expected.stdout.json  scenario.json
crates/tq-cli/tests/fixtures/conformance/target-selection-filtered/scripts/: __init__.py
crates/tq-cli/tests/fixtures/conformance/target-selection-filtered/scripts/docs/: __init__.py  generate.py
crates/tq-cli/tests/fixtures/conformance/target-selection-filtered/src/tq/: __init__.py  alpha.py
crates/tq-config/: Cargo.toml
crates/tq-config/src/: error.rs  lib.rs  loader.rs  loader_materialize.rs  loader_parse.rs  model.rs  paths.rs
crates/tq-config/tests/: loader_contract.rs
crates/tq-core/: Cargo.toml
crates/tq-core/src/: domain.rs  lib.rs
crates/tq-discovery/: Cargo.toml
crates/tq-discovery/src/: error.rs  filesystem.rs  index.rs  lib.rs
crates/tq-docsgen/: Cargo.toml
crates/tq-docsgen/src/: cli_docs.rs  config_examples.rs  error.rs  lib.rs  main.rs  markers.rs  pre_commit_docs.rs  rules_docs.rs
crates/tq-docsgen/tests/: cli_docs_contract.rs  config_examples_contract.rs  pre_commit_docs_contract.rs  rules_docs_contract.rs
crates/tq-engine/: Cargo.toml
crates/tq-engine/src/: context.rs  error.rs  lib.rs  models.rs  planner.rs  rule_id.rs  runner.rs
crates/tq-engine/tests/: engine_contract.rs
crates/tq-release/: Cargo.toml
crates/tq-release/src/: dependabot.rs  error.rs  lib.rs  main.rs  release_intent.rs  release_intent_repo.rs  runtime_deps.rs  verify.rs  workspace_version.rs
crates/tq-release/tests/: check_runtime_deps_contract.rs  verify_artifact_contents_contract.rs  verify_dependabot_contract.rs  verify_pr_release_intent_contract.rs  verify_release_intent_contract.rs  verify_release_policy_contract.rs  verify_workspace_version_contract.rs
crates/tq-reporting/: Cargo.toml
crates/tq-reporting/src/: error.rs  json.rs  lib.rs  path.rs  text.rs
crates/tq-reporting/tests/: reporting_contract.rs
crates/tq-rules/: Cargo.toml
crates/tq-rules/src/: builtin.rs  error.rs  file_too_large.rs  lib.rs  mapping_missing_test.rs  orphaned_test.rs  qualifiers.rs  rule_docs.rs  structure_mismatch.rs
crates/tq-rules/tests/: builtin_rule_docs_contract.rs  mapping_missing_test_rule_tests.rs  orphaned_test_rule_tests.rs  qualifiers_tests.rs  selection_tests.rs  structure_mismatch_rule_tests.rs  test_file_too_large_rule_tests.rs
crates/tq-rules/tests/support/: mod.rs
(+402 files in other folders)
