[workspace]
members = [
    "crates/tq-cli",
    "crates/tq-config",
    "crates/tq-discovery",
    "crates/tq-engine",
    "crates/tq-rules",
    "crates/tq-reporting",
    "crates/tq-release",
    "crates/tq-docsgen",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/stelewis/tq"

[workspace.dependencies]
clap = { version = "4.5.60", features = ["derive"] }
thiserror = "2.0.18"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
