[workspace]
members = [
    "crates/tq-cli",
    "crates/tq-core",
    "crates/tq-config",
    "crates/tq-discovery",
    "crates/tq-engine",
    "crates/tq-rules",
    "crates/tq-reporting",
    "crates/tq-release",
    "crates/tq-docsgen",
]
resolver = "3"

[workspace.package]
version = "0.9.0"
edition = "2024"
rust-version = "1.94"
license = "MIT"
repository = "https://github.com/stelewis/tq"
readme = "README.md"

[workspace.dependencies]
clap = { version = "4.6.0", features = ["derive"] }
flate2 = { version = "1.1.9", default-features = false, features = ["miniz_oxide"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tar = "0.4.45"
thiserror = "2.0.18"
toml = "1.1.2"
tq-cli = { version = "0.9.0", path = "crates/tq-cli" }
tq-core = { version = "0.9.0", path = "crates/tq-core" }
tq-config = { version = "0.9.0", path = "crates/tq-config" }
tq-discovery = { version = "0.9.0", path = "crates/tq-discovery" }
tq-docsgen = { version = "0.9.0", path = "crates/tq-docsgen" }
tq-engine = { version = "0.9.0", path = "crates/tq-engine" }
tq-release = { version = "0.9.0", path = "crates/tq-release" }
tq-reporting = { version = "0.9.0", path = "crates/tq-reporting" }
tq-rules = { version = "0.9.0", path = "crates/tq-rules" }
zip = { version = "8.5.0", default-features = false, features = ["deflate-flate2"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
