[project]
name = "tqlint"
description = "tq inspects a codebase's tests and enforces quality rules so tests remain discoverable, focused, actionable, and maintainable"
dynamic = ["version"]
readme = "README.md"
license = "MIT"
keywords = ["testing", "lint", "pytest", "quality", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
authors = [
    { name = "Stephen Lewis", email = "31178492+stelewis@users.noreply.github.com" }
]
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/stelewis/tq"
Repository = "https://github.com/stelewis/tq"
Documentation = "https://stelewis.github.io/tq/"
Issues = "https://github.com/stelewis/tq/issues"
Changelog = "https://github.com/stelewis/tq/blob/main/CHANGELOG.md"

[build-system]
requires = ["maturin>=1.11,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "bin"
manifest-path = "crates/tq-cli/Cargo.toml"
strip = true
exclude = [
    ".github/**",
    "docs/**",
    "scripts/**",
    "target/**",
    "tmp/**",
]

[dependency-groups]
dev = [
    "bandit>=1.9.3",
    "commitizen>=4.9.1",
    "detect-secrets>=1.5.0",
    "pip-audit>=2.10.0",
    "prek>=0.3.1",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "pyyaml>=6.0.3",
    "ruff>=0.15.0",
    "ty>=0.0.14",
]

[tool.ruff]
line-length = 88
src = ["src"]
extend-exclude = ["tmp"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
# COM812 – ignore when using ruff format; see docs <https://docs.astral.sh/ruff/rules/missing-trailing-comma/#philosophy>
ignore = ["COM812"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Tests are intentionally not packages (INP001) to avoid import shadowing in src-layout projects.
"tests/**/*.py" = ["INP001", "S101", "PLR2004"]
# Skill creator scripts are standalone CLIs under .github/, not importable packages (INP001).
".github/skills/skill-creator/scripts/*.py" = ["INP001"]

[tool.ruff.lint.pylint]
max-returns = 10

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "-m",
    "not integration and not e2e",
]
testpaths = ["tests"]
markers = [
    "e2e: mark end-to-end tests",
    "golden: deterministic golden/snapshot fixture tests (offline)",
    "integration: mark a test as an integration test",
    "regression: mark tests that exercise known regressions",
    "smoke: mark quick smoke tests",
    "slow: mark slow tests that may be skipped in fast CI jobs",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "cargo"
version_scheme = "semver"
tag_format = "$version"
update_changelog_on_bump = false
changelog_file = "CHANGELOG.md"
template = "CHANGELOG.md.j2"
change_type_order = ["Added", "Changed", "Deprecated", "Removed", "Fixed", "Security"]
gpg_sign = true
major_version_zero = true

[tool.commitizen.change_type_map]
feat = "Added"
fix = "Fixed"
perf = "Changed"
refactor = "Changed"
docs = "Changed"
chore = "Changed"
build = "Changed"
ci = "Changed"
test = "Changed"
style = "Changed"
revert = "Changed"
"breaking change" = "Changed"
"BREAKING CHANGE" = "Changed"

[tool.bandit]
exclude_dirs = [
    "tests",
]

[tool.ty.src]
exclude = [
    "tmp/scripts/**",
]

[tool.tq]
ignore_init_modules = true
max_test_file_non_blank_lines = 600
qualifier_strategy = "allowlist"
allowed_qualifiers = [
    "fixtures_golden",
    "fixtures_synthetic",
    "regression",
    "config",
]

[[tool.tq.targets]]
name = "scripts"
package = "scripts"
source_root = "."
test_root = "tests"
