[project]
name = "tqlint"
description = "A Python test quality toolkit written in Rust"
dynamic = ["version"]
readme = "README.md"
license = "MIT"
keywords = ["testing", "lint", "pytest", "quality", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
authors = [
    { name = "Stephen Lewis", email = "31178492+stelewis@users.noreply.github.com" }
]
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/stelewis/tq"
Repository = "https://github.com/stelewis/tq"
Documentation = "https://stelewis.github.io/tq/"
Issues = "https://github.com/stelewis/tq/issues"
Changelog = "https://github.com/stelewis/tq/blob/main/CHANGELOG.md"

[build-system]
requires = ["maturin>=1.11,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "bin"
manifest-path = "crates/tq-cli/Cargo.toml"
strip = true
exclude = [
    ".github/**",
    "docs/**",
    "scripts/**",
    "target/**",
    "tmp/**",
]

[dependency-groups]
dev = [
    "commitizen>=4.9.1",
    "detect-secrets>=1.5.0",
    "prek>=0.3.1",
    "ruff>=0.15.0",
    "ty>=0.0.14",
]

[tool.ruff]
line-length = 88
src = ["src"]
extend-exclude = ["tmp"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",  # ignore when using ruff format; see docs <https://docs.astral.sh/ruff/rules/missing-trailing-comma/#philosophy>
    # "D100",  # Missing docstring in public module
    # "D101",  # Missing docstring in public class
    # "D102",  # Missing docstring in public method
    # "D103",  # Missing docstring in public function
    # "D104",  # Missing docstring in public package
    # "D105",  # Missing docstring in magic method
    # "D106",  # Missing docstring in public nested class
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Tests are intentionally not packages (INP001) to avoid import shadowing in src-layout projects.
"tests/**/*.py" = [
    "INP001",  # Tests are intentionally not Python packages to avoid import shadowing
    "S101",  # Assert statements are fine in tests
    "PLR2004",  # Magic value comparisons are fine in tests
]

[tool.ruff.lint.pylint]
max-returns = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "cargo"
version_scheme = "semver"
tag_format = "$version"
update_changelog_on_bump = false
changelog_file = "CHANGELOG.md"
template = "CHANGELOG.md.j2"
change_type_order = ["Added", "Changed", "Deprecated", "Removed", "Fixed", "Security"]
pre_bump_hooks = ["cargo run -p tq-release --locked -- sync-workspace-dependency-versions --repo-root ."]
gpg_sign = true
major_version_zero = true

[tool.commitizen.change_type_map]
feat = "Added"
fix = "Fixed"
perf = "Changed"
refactor = "Changed"
docs = "Changed"
chore = "Changed"
build = "Changed"
ci = "Changed"
test = "Changed"
style = "Changed"
revert = "Changed"
"breaking change" = "Changed"
"BREAKING CHANGE" = "Changed"

[tool.ty.src]
exclude = [
    "tmp/scripts/**",
]
