[package]
name = "tq-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Rust CLI composition root for tq"
exclude = ["tests/**"]

[[bin]]
name = "tq"
path = "src/main.rs"

[dependencies]
clap.workspace = true
thiserror.workspace = true
tq-config.workspace = true
tq-engine.workspace = true
tq-reporting.workspace = true
tq-rules.workspace = true

[dev-dependencies]
assert_cmd = "2.1.1"
serde.workspace = true
serde_json = "1.0.140"
tempfile = "3.20.0"

[lints]
workspace = true
