[package]
name = "tq-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Strict configuration loading and validation for tq"
exclude = ["tests/**"]

[dependencies]
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
tq-core.workspace = true

[dev-dependencies]
tempfile = "3.27.0"

[lints]
workspace = true
