[package]
name = "tq-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Shared validated identifiers and vocabularies for tq"
exclude = ["tests/**"]

[dependencies]
thiserror.workspace = true

[lints]
workspace = true
