[package]
name = "tq-discovery"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Filesystem discovery and analysis indexing for tq"
exclude = ["tests/**"]

[dependencies]
thiserror.workspace = true

[dev-dependencies]
tempfile = "3.27.0"

[lints]
workspace = true
