[package]
name = "tq-docsgen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Rust docs generator for tq reference artifacts"

[dependencies]
clap.workspace = true
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tq-cli.workspace = true

[dev-dependencies]
assert_cmd = "2.1.1"
tempfile = "3.20.0"

[lints]
workspace = true
