[package]
name = "tq-docsgen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Rust docs generator for tq reference artifacts"
exclude = ["tests/**"]

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
tq-cli.workspace = true

[dev-dependencies]
assert_cmd = "2.2.0"
tempfile = "3.27.0"

[lints]
workspace = true
