[package]
name = "tq-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
tq-discovery = { path = "../tq-discovery" }

[dev-dependencies]
tempfile = "3.20.0"

[lints]
workspace = true
