[package]
name = "tq-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Rule orchestration and deterministic finding aggregation for tq"

[dependencies]
thiserror.workspace = true
tq-discovery.workspace = true

[dev-dependencies]
tempfile = "3.20.0"

[lints]
workspace = true
