[package]
name = "tq-release"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Future Rust release policy verification tooling for tq"

[dependencies]

[lints]
workspace = true
