[package]
name = "tq-release"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Rust release policy verification tooling for tq"
exclude = ["tests/**"]

[dependencies]
clap.workspace = true
flate2.workspace = true
tar.workspace = true
thiserror.workspace = true
zip.workspace = true

[dev-dependencies]
assert_cmd = "2.1.1"
tempfile = "3.20.0"

[lints]
workspace = true
