[package]
name = "tq-reporting"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json = "1.0.140"
thiserror.workspace = true
tq-engine = { path = "../tq-engine" }

[lints]
workspace = true
