[package]
name = "tq-reporting"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Text and JSON reporting adapters for tq"
exclude = ["tests/**"]

[dependencies]
serde.workspace = true
serde_json = "1.0.140"
thiserror.workspace = true
tq-core.workspace = true
tq-engine.workspace = true

[lints]
workspace = true
