[package]
name = "tq-rules"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
tq-engine = { path = "../tq-engine" }

[dev-dependencies]
tempfile = "3.20.0"
tq-discovery = { path = "../tq-discovery" }

[lints]
workspace = true
