[package]
name = "tq-rules"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Built-in rule implementations and selection logic for tq"
exclude = ["tests/**"]

[dependencies]
thiserror.workspace = true
tq-core.workspace = true
tq-engine.workspace = true

[dev-dependencies]
tempfile = "3.27.0"
tq-discovery.workspace = true

[lints]
workspace = true
